fixes popup on mobile

--- a/src/css/mobile.styl
+++ b/src/css/mobile.styl
@@ -14,12 +14,6 @@
 		right 300px
 		top 70px
 
-	.esriPopupWrapper
-		.sizer
-			width 100% !important
-		.sizer.content
-			width 100% !important
-
 @media (max-width: 900px)
 	.report-button
 		right 70px
